--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -19,5 +19,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: false
-          context: .
-          file: Dockerfile
+          target: runner
