--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -15,8 +15,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
-      - name: Build first
+      - name: Build image
         uses: docker/build-push-action@v3
         with:
           push: false
-          target: runner
