--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -1,21 +1,6 @@
 name: First test
 run-name: Just testing things
 on: [push]
-jobs:
-  First-Attempt:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "I'm working!"
-
-
-  Docker-fun:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
-      - name: Build image
-        uses: docker/build-push-action@v3
-        with:
-          push: false
+runs:
+  using: 'docker'
+  image: Dockerfile
