--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -20,6 +20,6 @@ jobs:
         with:
           push: false
           
-      - name: Something
+      - name: Where am I
         run: |
-          docker build -t api-test .
+          echo "$PWD"
