--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -20,6 +20,7 @@ jobs:
         with:
           push: false
           network: "host"
+        outputs:
           imageid: api-test
 
           
