another attempt at docker

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -22,6 +22,8 @@ jobs:
           network: "host"
           tags:
             api-test:latest
+        run: |
+          docker images
 
           
       - name: Docker?
