--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -34,5 +34,5 @@ jobs:
         uses: actions/checkout@v3
       - name: Build docker image
         run: docker-compose build
-      - name: Run docker image
-        run: docker-compose run
+      - name: Get the openapijson
+        run: curl http://localhost:8003/openapi.json
