--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -7,34 +7,32 @@ jobs:
     steps:
       - run: echo "I'm working!"
 
-
-  Docker-fun:
+  Python-maybe:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: ahibert/small-api:latest
-
-
-  Docker-use:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
+      - name: checkout repo
         uses: actions/checkout@v3
-      - name: Build docker image
-        run: docker-compose build
-      - name: run the container
-        run: docker run --network="host" test-api_small-api:latest
-      - name: Get the openapijson
-        run: curl http://localhost:8003/openapi.json
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.10
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install fastapi
+            - name: please?
+              run: |
+                from fastapi.openapi.utils import get_openapi
+                from main import app
+                import json
+
+
+                with open('openapi.json', 'w') as f:
+                    json.dump(get_openapi(
+                        title=app.title,
+                        version=app.version,
+                        openapi_version=app.openapi_version,
+                        description=app.description,
+                        routes=app.routes,
+                        openapi_prefix=app.openapi_prefix,
+                    ), f)
