--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -20,3 +20,5 @@ jobs:
         run: |
           pip install fastapi
           python json_get.py
+      - name: is the file there?
+        run: ls
