--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -16,9 +16,13 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.10.8
-      - name: python maybe?
+      - name: get openapi json
         run: |
           pip install fastapi
           python json_get.py
-      - name: is the file there?
-        run: ls
+      - name: upload openapi json as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: new-json
+          path: openapi.json
+
