deleting extra endpoint and changing workflow to pull request

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -1,6 +1,6 @@
 name: First test
 run-name: Just testing things
-on: [push]
+on: [pull-request]
 jobs:
   First-Attempt:
     runs-on: ubuntu-latest
