fixed pull request on sample workflow

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -1,6 +1,6 @@
 name: First test
 run-name: Just testing things
-on: [pull-request]
+on: [pull_request]
 jobs:
   First-Attempt:
     runs-on: ubuntu-latest
