adding docker to workflow

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -56,6 +56,6 @@ jobs:
       volumes:
         - ${pwd}:json_docs
     steps:
-      - name: Run docker container?
+      - name: Run docker container??
         run: docker run test-api-test:latest
 
