fixed job requirements by making array

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -49,7 +49,7 @@ jobs:
           path: openapi.json
 
   Test-docker-thing:
-    needs: Get-new-json, Get-old-json
+    needs: [Get-new-json, Get-old-json]
     runs-on: ubuntu-latest
     container:
       image: ahibert/test-api-test:latest
