--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: new-json
-          path: openapi.json
+          path: old-json.json
 
 
   Get-old-json:
@@ -46,13 +46,18 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: old-json
-          path: openapi.json
+          path: new-json.json
 
   Test-docker-thing:
     runs-on: ubuntu-latest
+    needs: [Get-new-json, Get-old-json]
     steps:
       - name: checkout repo
         uses: actions/checkout@v3
-      - name: Pull docker container??
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+      - name: Pull docker container
         run: docker pull ahibert/test-api-test:latest
+      - name: Are the files here?
+        run: ls
 
