--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -59,5 +59,5 @@ jobs:
       - name: Pull docker container
         run: docker pull ahibert/test-api-test:latest
       - name: Do I have the image?
-        run: docker image ls
+        run: docker run ahibert/test-api-test:latest
 
