--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -59,5 +59,5 @@ jobs:
       - name: Pull docker container
         run: docker pull ahibert/test-api-testing:latest
       - name: Run the image
-        run: docker run -v old-json.json:json_docs ahibert/test-api-testing:latest
+        run: docker run -v old-json.json:/json_docs ahibert/test-api-testing:latest
 
