--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Get-new-json, Get-old-json]
     steps:
-      - name: checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v3
       - name: Download artifacts
         uses: actions/download-artifact@v3
