--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Pull docker container
         run: docker pull ahibert/test-api-testing:latest
       - name: Copy files?
-        run: docker copy old-json/old-json.json ahibert/test-api-testing:/json_docs
+        run: docker cp old-json/old-json.json ahibert/test-api-testing:/json_docs
       - name: Run the image please??
         run: docker run ahibert/test-api-testing:latest
 
