--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -58,8 +58,7 @@ jobs:
         uses: actions/download-artifact@v3
       - name: Pull docker container
         run: docker pull ahibert/test-api-testing:latest
-      - name: Copy files?
-        run: docker cp old-json/old-json.json ahibert/test-api-testing:/json_docs
-      - name: Run the image please??
-        run: docker run ahibert/test-api-testing:latest
+      - name: where files
+        run: ls
+
 
