--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -59,6 +59,6 @@ jobs:
       - name: Pull docker container
         run: docker pull ahibert/test-api-testing:latest
       - name: where files
-        run: cd old-json | ls
+        run: cd /old-json | ls
 
 
