--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -62,6 +62,6 @@ jobs:
         run: cat old-json/old-json.json
       - name: Another attempt
         run: |
-          docker run --mount type=bind,source=/old-json,target=/json_docs ahibert/test-api-testing:latest
+          docker run --mount type=bind,source=old-json,target=/json_docs ahibert/test-api-testing:latest
 
 
