--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -51,19 +51,12 @@ jobs:
   Test-docker-thing:
     runs-on: ubuntu-latest
     needs: [Get-new-json, Get-old-json]
+    container:
+      image: ahibert/test-api-testing:latest
+      volumes:
+        old-json:/json_docs
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: old-json
-      - name: Pull docker container
-        run: docker pull ahibert/test-api-testing:latest
-      - name: WHERE ARE THE FILES
-        run: ls
-      - name: Another attempt
-        run: |
-          docker run ahibert/test-api-testing:latest
+      - name: I don't know
+        run: python main.py
 
 
