testing warnings on github

--- a/.github/workflows/error-log-testing.yaml
+++ b/.github/workflows/error-log-testing.yaml
@@ -6,4 +6,4 @@ jobs:
     steps:
       - name: Warning message
         run: | 
-          ""::warning title=warning::This is a warning""
+          echo ""::warning title=warning::This is a warning""
