testing warnings on github pull request

--- a/.github/workflows/error-log-testing.yaml
+++ b/.github/workflows/error-log-testing.yaml
@@ -7,3 +7,6 @@ jobs:
       - name: Warning message
         run: | 
           echo ""::warning title=warning::This is a warning""
+      - name: Job summary?
+        run: |
+          echo "Message goes here" >> $GITHUB_STEP_SUMMARY
