testing failing  workflow

--- a/.github/workflows/error-log-testing.yaml
+++ b/.github/workflows/error-log-testing.yaml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - name: Warning message
         run: | 
+          exit 1
           echo ""::warning title=warning::This is a warning""
       - name: Job summary?
         run: |
