--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -57,9 +57,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v3
       - name: Pull docker container
-        run: docker pull ahibert/test-api-testing:latest
+        run: docker pull ahibert/api-testing:latest
       - name: Run docker container
         run: |
-          docker run --name test-container --mount type=bind,source=$(pwd)/old-json,target=/app/old-json --mount type=bind,source=$(pwd)/new-json,target=/app/new-json ahibert/test-api-testing:latest
-
-
+          docker run --name test-container --mount type=bind,source=$(pwd)/old-json,target=/app/old-json --mount type=bind,source=$(pwd)/new-json,target=/app/new-json ahibert/test-api-testing:latest additions
