--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -61,3 +61,6 @@ jobs:
       - name: Run docker container
         run: |
           docker run --name test-container --mount type=bind,source=$(pwd)/old-json,target=/app/old-json --mount type=bind,source=$(pwd)/new-json,target=/app/new-json ahibert/api-testing:latest additions
+      - name: Random warning
+        run: |
+          echo:"::warning::Random warning"
