playing around with warnings

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -63,4 +63,4 @@ jobs:
           docker run --name test-container --mount type=bind,source=$(pwd)/old-json,target=/app/old-json --mount type=bind,source=$(pwd)/new-json,target=/app/new-json ahibert/api-testing:latest additions
       - name: Random warning
         run: |
-          echo:"::warning::Random warning"
+          echo "::warning::Random warning"
