--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -81,7 +81,7 @@ jobs:
           file1="logger.txt"
           file2="accepted_changes.txt"
           if cmp -s "$file1" "$file2"; then
-            printf 'Files are the same'
+            printf "Files are the same"
           else
-            printf 'UNAUTHORIZED CHANGES ABORT ABORT"
+            printf "UNAUTHORIZED CHANGES ABORT ABORT"
           fi
