--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -72,6 +72,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Generate-changelogs]
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
       - name: Download log artifact
         uses: actions/download-artifact@v3
         with:
