trying to compare log to expected

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -90,4 +90,5 @@ jobs:
       - name: What do they actually look like?
         run: |
           cat "logger.txt"
+      - name: Fine, we'll do this your way
           cat "accepted_changes.txt"
