trying to compare log to expected

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -91,4 +91,5 @@ jobs:
         run: |
           cat "logger.txt"
       - name: Fine, we'll do this your way
+        run: |
           cat "accepted_changes.txt"
