--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -80,9 +80,7 @@ jobs:
           name: changelogs
       - name: Compare texts
         run: |
-          file1="logger.txt"
-          file2="accepted_changes.txt"
-          if cmp -s "$file1" "$file2"; then
+          if cmp -s -l logger.txt accepted_changes.txt; then
             printf "Files are the same"
           else
             printf "UNAUTHORIZED CHANGES ABORT ABORT"
