--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: get openapi json
         run: |
           pip install fastapi
-          python json_get.py
+          python src/test/api_testing/json_get.py
       - name: Change file name
         run: mv openapi.json old-json.json
       - name: Upload openapi json as artifact
@@ -80,7 +80,7 @@ jobs:
           name: changelogs
       - name: Compare texts
         run: |
-          if diff -u --ignore-space-change --strip-trailing-cr --ignore-blank-lines logger.txt accepted_changes.txt; then
+          if diff -u --ignore-space-change --strip-trailing-cr --ignore-blank-lines logger.txt src/test/api_testing/accepted_changes.txt; then
             printf "No unauthorized changes"
           else
             exit 1
