--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -11,10 +11,12 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.10.8
+      - name: what does it look like?
+        run: ls
       - name: get openapi json
         run: |
           pip install fastapi
-          python json_get.py
+          python src/test/api_testing/json_get.py
       - name: Change filename
         run: mv openapi.json new-json.json
       - name: upload openapi json as artifact
