--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: get openapi json
         run: |
           pip install fastapi
-          python src/test/api_testing/json_get.py
+          python -m json_get
       - name: Change filename
         run: mv openapi.json new-json.json
       - name: upload openapi json as artifact
@@ -40,7 +40,7 @@ jobs:
       - name: get openapi json
         run: |
           pip install fastapi
-          python src/test/api_testing/json_get.py
+          python -m json_get
       - name: Change file name
         run: mv openapi.json old-json.json
       - name: Upload openapi json as artifact
