tried to replicate template folder structure

--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: get openapi json
         run: |
           pip install fastapi
-          python -m json_get
+          python -m app/json_get
       - name: Change file name
         run: mv openapi.json old-json.json
       - name: Upload openapi json as artifact
