--- a/.github/workflows/sample-workflow.yaml
+++ b/.github/workflows/sample-workflow.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: get openapi json
         run: |
           pip install fastapi
-          python -m app/json_get
+          python -m src/json_get
       - name: Change filename
         run: mv openapi.json new-json.json
       - name: upload openapi json as artifact
